--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Angelo Graniello porftolio for information.">
-    <link rel="icon" href="/files/assets/logo.svg" type="image/x-icon">
+    <link rel="icon" href="./files/assets/logo.svg" type="image/x-icon">
     <title>AngeloGraniello Portfolio</title>
     <!-- Complements -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Native Css -->
-    <link rel="stylesheet" href="/files/css/background.css">
-    <link rel="stylesheet" href="/files/css/index.css">
+    <link rel="stylesheet" href="./files/css/background.css">
+    <link rel="stylesheet" href="./files/css/index.css">
 </head>
 
 <body>
@@ -28,11 +28,11 @@
         <section class="home-page">
             <header class="header">
                 <div class="logo">
-                    <img src="/files/assets/logo.svg" alt="Logo Angelo Graniello Porfolio">
+                    <img src="./files/assets/logo.svg" alt="Logo Angelo Graniello Porfolio">
                 </div>
                 <nav class="nav-bar">
                     <a href=""><i class="fas fa-home"></i>Home</a>
-                    <a href="/pages/skills.html"><i class="fas fa-user"></i>Skills</a>
+                    <a href="./pages/skills.html"><i class="fas fa-user"></i>Skills</a>
                     <a href=""><i class="fas fa-cog"></i>Projects</a>
                     <a href=""><i class="fas fa-comments"></i>Reviews</a>
                     <a href=""><i class="fas fa-envelope"></i>Contact Me</a>
@@ -40,7 +40,7 @@
             </header>
 
             <div class="home-page-img">
-                <img src="/files/assets/welcome-page.gif" alt="" class="home-page-gif">
+                <img src="./files/assets/welcome-page.gif" alt="" class="home-page-gif">
             </div>
 
             <div class="home-page-text">
@@ -68,10 +68,10 @@
             </div>
         </section>
     </main>
-    <script src="/files/js/front-end.js"></script>
-    <script src="/files/js/color-mode.js"></script>
-    <script src="/files/js/frontend-skills.js"></script>
-    <script src="/files/js/progressbar.min.js"></script>
+    <script src="./files/js/front-end.js"></script>
+    <script src="./files/js/color-mode.js"></script>
+    <script src="./files/js/frontend-skills.js"></script>
+    <script src="./files/js/progressbar.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
